GNOME Bugzilla – Bug 773861
wavparse: element error is posted at EOS even though WAV file is OK
Last modified: 2016-11-30 08:52:38 UTC
In 0.10.0, once a WAV file reaches EOS, this error is posted: /GstPipeline:pipeline0/GstWavParse:wavparse0: The stream is of a different type than handled by this element. this has been happening to me with every WAV file I tried. A test WAV file that reproduces the problem can in fact be generated with gst-launch: gst-launch-1.0 audiotestsrc num-buffers=10 ! "audio/x-raw, rate=44100, format=S16LE, channels=2" ! wavenc ! filesink location=test.wav when I then play it like this, the error is posted: gst-launch-1.0 filesrc location=test.wav ! wavparse ! fakesink It also happens if I use the latest git master.
Err, typo - I meant 1.10.0, not 0.10.0 :)
It seems that the fix from https://bugzilla.gnome.org/show_bug.cgi?id=773643 causes this problem, since the error message comes from gstwavparse.c line 2220.
The problem is that on EOS we check for no caps and do an error then... but when settings caps we replace them with NULL again. So it will always cause an error it seems. How could we have missed that?
Created attachment 339015 [details] [review] wavparse: Don't set caps to NULL after setting them on the srcpad We would like to check later on EOS if we found a known stream type or not, to possibly post an error message.
Created attachment 339024 [details] [review] test case for wavparse
commit 752dd15c54238c389f676105867ff7815d623ced Author: Tim-Philipp Müller <tim@centricular.com> Date: Thu Nov 3 13:27:51 2016 +0000 tests: wavparse: add test for processing an actual .wav file https://bugzilla.gnome.org/show_bug.cgi?id=773861 commit aecc31ab7b4e5a7f5d0b8889c6815644c6b5598a Author: Sebastian Dröge <sebastian@centricular.com> Date: Thu Nov 3 12:34:51 2016 +0200 wavparse: Don't set caps to NULL after setting them on the srcpad We would like to check later on EOS if we found a known stream type or not, to possibly post an error message. https://bugzilla.gnome.org/show_bug.cgi?id=773861
*** Bug 775025 has been marked as a duplicate of this bug. ***
*** Bug 775382 has been marked as a duplicate of this bug. ***